--- a/src/globals.css
+++ b/src/globals.css
@@ -1,6 +1,7 @@
 @import 'tailwindcss';
+@custom-variant dark (&:where(.dark, .dark *));
 
 @font-face {
 	font-family: 'vazir';
-	src: url("/");
+	src: url('/');
 }
