ui login and add font

--- a/src/globals.css
+++ b/src/globals.css
@@ -3,5 +3,9 @@
 
 @font-face {
 	font-family: 'vazir';
-	src: url('/');
+	src: url('/Vazir.woff2') format('woff2'), url('/Vazir.woff') format('woff'), url('/Vazir.ttf') format('truetype');
+}
+body {
+	font-family: 'vazir';
+	font-size: 16px;
 }
